[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/animtree_node_helpers/Ui/VbUtility.gd" type="Script" id=1]

[node name="Vb_Utility" type="VBoxContainer"]
margin_right = 150.0
margin_bottom = 34.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 150.0
margin_bottom = 116.0
text = "Way to copy currently selected Anim Node into selected AnimationNodeStateMachine or AnimationNodeBlendTree"
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
margin_top = 120.0
margin_right = 150.0
margin_bottom = 140.0

[node name="BtnCopy" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
margin_right = 73.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Copy"

[node name="BtnPaste" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 77.0
margin_right = 150.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
text = "Paste"

[node name="Lbl_BufferedNodeType" type="Label" parent="."]
unique_name_in_owner = true
margin_top = 120.0
margin_right = 150.0
margin_bottom = 134.0
size_flags_horizontal = 3
autowrap = true
